# solid-markdown-wasm

./: .releaserc  CNAME  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  THEMES_AND_LANGS.md  biome.json  bun.lockb  bunfig.toml  index.html  package-lock.json  package.json  prepare_package.cjs  prepare_package.js  process_wasm_pkg.js  tsconfig.app.json  verify-actions.ts  vite.config.ts
.github/: SHA_VERIFICATION.md
assets/: _baseUniq-Ct25NOJ9-BqPXUSUN.js  _baseUniq-DI8kPq66-DUHUXAor.js  _baseUniq-DI8kPq66-OWTBWbKP.js  arc-CwpmMzXN-CHgDuojb.js  arc-CwpmMzXN-DxRFhiFD.js  arc-DUFaZNjh-CkJ4XHPM.js  architectureDiagram-VXUJARFQ-B_5tNpkT-LLJgR8m4.js  architectureDiagram-VXUJARFQ-CJAlM8HG-DqEyF0Ry.js  architectureDiagram-VXUJARFQ-CJAlM8HG-JJkT6DFE.js  blockDiagram-VD42YOAC-B4MTk7rK-C3q20qpr.js  blockDiagram-VD42YOAC-CnRg9nB6-BCRLmD5A.js  blockDiagram-VD42YOAC-CnRg9nB6-BNQPQd3a.js  c4Diagram-YG6GDRKO-CqIJ47N6-CzlNzfTj.js  c4Diagram-YG6GDRKO-CqIJ47N6-DecGc4to.js  c4Diagram-YG6GDRKO-CuY0hIwA-DhypkOkZ.js  channel-QM-VFzIR-BZZIG4-F.js  channel-QM-VFzIR-DPAyEFpo.js  channel-wFXz9r9J-DRbCEFgN.js  chunk-4BX2VUAB-BGPvTzTU-BSrdcege.js  chunk-4BX2VUAB-FodOoytM-BUnB_lJd.js  chunk-4BX2VUAB-FodOoytM-s0wB3QIS.js  chunk-55IACEB6-BvT8ooNu-BqbcGqzT.js  chunk-55IACEB6-BvT8ooNu-DGY14iI_.js  chunk-55IACEB6-DKQtITYU-8VcXU9ge.js  chunk-B4BG7PRW-B4mpOLck-D1FU1WSl.js  chunk-B4BG7PRW-B4mpOLck-D_EdTtRp.js  chunk-B4BG7PRW-K2saWPKH-B5poAZfJ.js  chunk-DI55MBZ5-B09uRsiX-ISpOAarb.js  chunk-DI55MBZ5-CRkrndLZ-O_baNQMm.js  chunk-DI55MBZ5-CRkrndLZ-Q-otg-19.js  chunk-FMBD7UC4-BdTn8YTB-BlOVpUFu.js  chunk-FMBD7UC4-BdTn8YTB-CmF5V90u.js  chunk-FMBD7UC4-DyP6a8cj-5EbDqy5G.js  chunk-QN33PNHL-FMQv8mAb-BGWfUWxL.js  chunk-QN33PNHL-FMQv8mAb-CGL6acuF.js  chunk-QN33PNHL-L9dtGNtd-ClKrwb4F.js  chunk-QZHKN3VN-BM8G46OV-avYrxRAj.js  chunk-QZHKN3VN-D_ND3uxx-DcXMMd4b.js  chunk-QZHKN3VN-D_ND3uxx-DebwS6PX.js  chunk-TZMSLE5B-EFwYjebl-DJrWrpz_.js  (+195 more)
example-react/: index.html  package.json  (+2 more)
markdown-renderer/: Cargo.toml  twiggy-dominator.txt
markdown-renderer/benches/: my_benchmark.rs
markdown-renderer/sample-data/: md0.md  md1.md  md2.md  page.html
markdown-renderer/src/: highlight.rs  lib.rs  syntastica_adapter.rs  syntect_adapter.rs  syntect_plugin.rs  tree_sitter_adapter.rs  tree_sitter_collection.rs  wasm_libc.rs
markdown-renderer/test-data/: md0.html  md1.html  md1_cached.html  md2.html
(+29 files in other folders)
