[package]
name = "markdown-renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
comrak = { git = "https://github.com/DoublePrecision/comrak.git", branch = "feat/math-renderer", default-features = false }
once_cell = "1.21.3"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}

[profile.release]
opt-level = "z" 
lto = "fat"
codegen-units = 1
panic = 'abort'
