[package]
name = "markdown-renderer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.105"
comrak = { git = "https://github.com/DoublePrecision/comrak.git", branch = "feat/math-renderer", default-features = false }
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
mini-moka = { version = "0.10.3", optional = true }
ammonia = { version = "4.1.2", optional = true }
regex = "1.12.2"

[features]
default = ["mini-moka"]
cached-code = ["mini-moka"]
sanitize = ["ammonia"]

[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
panic = 'abort'

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "my_benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd", "--enable-bulk-memory", "--enable-mutable-globals"]
